--- a/works2.html
+++ b/works2.html
@@ -294,20 +294,20 @@
         </div>
     </header>
 
-    <main role="main" id="main" style="background: #000;">
+    <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--Section-->
-                <div class="section">
+                <div class="section" data-bgcolor="#000" data-humcolor="#ffffff">
                     <div class="wrapper-full no-gap">
                         <div class="c-col-12 no-gap">
                             <div class="portfolio-showcase carousel-showcase">
                                 <div class="cas-bg-text">Featured Works</div>
                                 <div class="cas-headline">
-                                    Hello! We are PeThemes,
-                                    <br>a digital creative agency from NY.
-                                    <br>Creating wonderful digital products
-                                    <br>and a pinch of rock'n roll!
+                                    The perfect balance of passion, inspiration,
+                                    <br> commitment & meticulous artisanship
+                                    <br>to build digital products that deliver results
+                                    <br>and help businesses grow globally.
                                 </div>
                                 <div class="cas-project-wrapper">
                                     <div class="cas-project">
@@ -389,9 +389,79 @@
                         </div>
                     </div>
                 </div>
+                <div style="background: #fff;
+                clear: both;" class="section-p" data-humcolor="#000">
+
+                    <div class="wrapper-full no-gap">
+
+                        <div class="c-col-9 no-gap has-parallax" data-parallax-direction="up"
+                            data-parallax-strength=".1">
+
+                            <div class="single-image">
+                                <img alt="Single Image" src="/assets/resources/img/work-kedar.png">
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="wrappers">
+
+                        <div class="c-col-8">
+
+                            <div class="text-wrapper">
+                                <h3 class="has-anim" data-stagger="0.05" data-duration="1.5" data-animation="linesUp">
+                                    As a patch of light concept of the number one Euclid explorations preserve and
+                                    cherish that pale blue dot rogue. Vanquish the impossible a very small stage in a
+                                    vast cosmic arena made in the interiors of collapsing stars intelligent beings from
+                                    which we spring finite but unbounded.
+                                </h3>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="wrappers">
+
+                        <div class="c-col-4">
+
+                            <div data-delay="0" class="a-number-counter light">
+                                <div class="ac-number">17</div>
+                                <span class="ac-sign">+</span>
+                                <div class="ac-title">Galaxies</div>
+
+                            </div>
+                            <span class="a-empty-space" style="height: 70px"></span>
+                            <div data-delay="0" class="a-number-counter light">
+                                <div class="ac-number">73</div>
+                                <span class="ac-sign"></span>
+                                <div class="ac-title">Known Planets</div>
+                            </div>
+                        </div>
+
+                        <div class="c-col-4">
+                            <div data-delay="0" class="a-number-counter light">
+                                <div class="ac-number">157</div>
+                                <span class="ac-sign"></span>
+                                <div class="ac-title">Black holes</div>
+                            </div>
+                            <span class="a-empty-space" style="height: 70px"></span>
+                            <div data-delay="0" class="a-number-counter light">
+                                <div class="ac-number">350</div>
+                                <span class="ac-sign">+</span>
+                                <div class="ac-title">Stars</div>
+                            </div>
+                        </div>
+                        <span class="a-empty-space" style="height: 100px"></span>
+                    </div>
+
+                </div>
 
                 <!-- footer -->
-                <footer id="footer" class="">
+                <footer id="footer" class="dark-footer">
                     <div class="f-container">
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
@@ -440,7 +510,7 @@
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -465,7 +535,7 @@
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="behance.json"
+                                                    <lottie-player class="so" src="behance-w.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
