--- a/works2.html
+++ b/works2.html
@@ -298,7 +298,7 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--Section-->
-                <div class="section" data-bgcolor="#000" data-humcolor="#ffffff">
+                <div class="section dd" data-bgcolor="#000" data-humcolor="#ffffff">
                     <div class="wrapper-full no-gap">
                         <div class="c-col-12 no-gap">
                             <div class="portfolio-showcase carousel-showcase">
@@ -389,6 +389,92 @@
                         </div>
                     </div>
                 </div>
+                <!-- Section Mobile -->
+                <div class="top-p">
+                    The perfect balance of passion, inspiration,
+                    <br> commitment & meticulous artisanship
+                    <br>to build digital products that deliver results
+                    <br>and help businesses grow globally.
+                </div>
+                <section class="section-container mob-port w-hde" style="background: #000;
+                 padding-top: 20%;">
+
+                    <div class="mobile-container image-1">
+
+                        <div class="slider-element-container">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="patronum.html" data-cursor-text="View"
+                                                    data-cursor=" -color-accent-lilac">
+                                                    <img src="/assets/resources/img/patronum-mobile-work.png">
+                                                    <h2><span>01</span>Patronum</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
+                                                    <h2><span>03</span>Kedarkala</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
+                                                    <h2><span>02</span>Dmtca</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
+                                                    <h2><span>04</span>Pdtl</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/dharan-mobile-work.png">
+                                                    <h2><span>06</span>Dharan</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
+                                                    <h2><span>05</span>Quickx</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="en-form-submit"><a href="works.html" class="en-btn en-btn_send" data-magnetic
+                            data-cursor="-opaque"><span data-text="Read More">View All Projects</span></a></div>
+                </section>
                 <div style="background: #fff;
                 clear: both;" class="section-p" data-humcolor="#000">
 
