--- a/about.html
+++ b/about.html
@@ -24,23 +24,21 @@
         gtag('config', 'G-PKJE9LVB35');
     </script>
 </head>
-<div class="load-container">
-    <div class="loading-screen"></div>
-</div>
 
-<body data-barba="wrapper" style="background: #fff;">
-    <div class="init-load">
+
+<body data-barba="wrapper" style="background: #fff;" data-page-loader="true">
+    <div class="init-load" style="    background: linear-gradient(45deg, #00020f, #040000);">
         <div id="noise2"></div>
-        <div class="inner">
+        <div class="inner align-b">
             <div class="counter c-first">
                 <div class="count">
-                    <span>0</span>
-                    <span class="t">1</span>
+                    <!-- <span>0</span>
+                    <span class="t">1</span> -->
                 </div>
             </div>
             <div class=" counter c-second">
                 <div class="count">
-                    <span>0</span>
+                    <!-- <span>0</span>
                     <span>1</span>
                     <span>2</span>
                     <span>3</span>
@@ -50,12 +48,12 @@
                     <span>7</span>
                     <span>8</span>
                     <span>9</span>
-                    <span class="t">0</span>
+                    <span class="t">0</span> -->
                 </div>
             </div>
             <div class="counter c-third">
                 <div class="count">
-                    <span>0</span>
+                    <!-- <span>0</span>
                     <span>1</span>
                     <span>2</span>
                     <span>3</span>
@@ -155,13 +153,12 @@
                     <span>7</span>
                     <span>8</span>
                     <span>9</span>
-                    <span class="t">0</span>
+                    <span class="t">0</span> -->
                 </div>
             </div>
-            <span class="percentage t">%</span>
+            <span class="percentage load-text" style="position: relative;">preparing your experience... </span>
         </div>
     </div>
-
     <header>
         <a class="en-logo" href="index.html">
             <img src="/assets/resources/img/enigma-en-logo.svg" alt="logo" />
@@ -2282,7 +2279,6 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
