--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-
+    <script src="assets/resources/js/pages-js/preloader.js"></script>
     <script src="assets/resources/js/page.js"></script>
 
     <script>
